--- a/storybook-5.2/index.html
+++ b/storybook-5.2/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><meta charset="utf-8"><title>Storybook</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>html, body {
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Storybook</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>html, body {
     overflow: hidden;
     height: 100%;
     width: 100%;
@@ -14,4 +14,7 @@
   } catch (e) {
     // eslint-disable-next-line no-console
     console.warn('unable to connect to parent frame for connecting dev tools');
-  }</script><link rel="icon" href="ring-ui-favicon.ico" type="image/x-icon" sizes="16x16 32x32"></head><body><div id="root"></div><div id="docs-root"></div><script src="runtime~main.0c4d778cda1a0e417528.bundle.js"></script><script src="vendors~main.a42ee59c1d49ba8cc3b4.bundle.js"></script><script src="main.4b1ff89fff5430b6aa30.bundle.js"></script></body></html>
+  }</script><link rel="icon" href="ring-ui-favicon.ico" type="image/x-icon" sizes="16x16 32x32"><style>#root[hidden],
+      #docs-root[hidden] {
+        display: none !important;
+      }</style></head><body><div id="root"></div><div id="docs-root"></div><script>window['DOCS_MODE'] = false;</script><script src="runtime~main.0c4d778cda1a0e417528.bundle.js"></script><script src="vendors~main.21ca03e61934d79629c7.bundle.js"></script><script src="main.198c010529d17e68f500.bundle.js"></script></body></html>
