--- a/master/index.html
+++ b/master/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><meta charset="utf-8"><title>Storybook</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>html, body {
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Storybook</title><meta name="viewport" content="width=device-width,initial-scale=1"><style>html, body {
     overflow: hidden;
     height: 100%;
     width: 100%;
@@ -14,4 +14,7 @@
   } catch (e) {
     // eslint-disable-next-line no-console
     console.warn('unable to connect to parent frame for connecting dev tools');
-  }</script><link rel="icon" href="ring-ui-favicon.ico" type="image/x-icon" sizes="16x16 32x32"></head><body><div id="root"></div><script src="runtime~main.eb6fff64078eae1cfe56.bundle.js"></script><script src="vendors~main.c85249e7eb83cc8f7314.bundle.js"></script><script src="main.ac076ec2b28142acddef.bundle.js"></script></body></html>
+  }</script><link rel="icon" href="ring-ui-favicon.ico" type="image/x-icon" sizes="16x16 32x32"><style>#root[hidden],
+      #docs-root[hidden] {
+        display: none !important;
+      }</style></head><body><div id="root"></div><div id="docs-root"></div><script>window['DOCS_MODE'] = false;</script><script src="runtime~main.0c4d778cda1a0e417528.bundle.js"></script><script src="vendors~main.7eb68ed3197c3c2b38e7.bundle.js"></script><script src="main.3071027c72e1ba8b0842.bundle.js"></script></body></html>
